SERVER-57708 Ensure ClientMetadata left in valid state after failed parsing